gcc/testsuite/rust/rustc/ui/issues/issue-10176.rs
fn f() -> isize {
    (return 1, return 2)
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
// { dg-error ".E0308." "" { target *-*-* } .-4 }
}

fn main() {}

